--- a/.github/workflows/first_ci.yml
+++ b/.github/workflows/first_ci.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
@@ -35,6 +36,9 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+
+     - name: Permission
+      run: chmod +x gradlew
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
